add load phase